added first few questions

--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
     <script type="module" src="https://js.withorbit.com/orbit-web-component.js"></script>
   </head>
   <body>
-    <orbit-reviewarea color="purple">
+    <orbit-reviewarea color="red">
       <orbit-prompt
-        question="What's the working name for Andy's experimental mnemonic medium platform?"
-        answer="Orbit"
+        question="What are you to renounce?"
+        answer="I should renounce the devil and all his works, the pomps and vanity of this wicked world, and all the sinful lusts of the flesh."
       ></orbit-prompt>
       <orbit-prompt
-        question="What's the new-ish web technology used to embed Orbit prompts into web pages?"
-        answer="Web components"
+        question="What are you to believe?"
+        answer="I should believe all the articles of the Christian faith."
       ></orbit-prompt>
       <orbit-prompt
-        question="Given a right triangle with legs of length $a$ and $b$, what is the length of hypotenuse $c$?"
-        answer="$$c = \sqrt{a^2 + b^2}$$"
+        question="What are you to keep?"
+        answer="I should keep God's holy will and commandments, and walk in the same all the days of my life."
+      ></orbit-prompt>
+      <orbit-prompt
+        question="What is your duty towards God?"
+        answer="My duty towards God is to believe in him, to fear him, and to love him, with all my heart, with all my mind, with all my soul, and with all my strength; to worship him, to give him thanks, to put my whole trust in him, to call upon him, to honour his holy Name and his Word, and to serve him truly all the days of my life."
+      ></orbit-prompt>
+      <orbit-prompt
+        question="What is your duty towards your Neighbor?"
+        answer="My duty towards my Neighbour is to love him as myself, and to do to all men as I would they should do unto me: To love, honour, and succour my father and mother: To honour and obey the Queen, and all that are put in authority under her: To submit myself to all my governors, teachers, spiritual pastors and masters: To order myself lowly and reverently to all my betters: To hurt nobody by word nor deed: To be true and just in all my dealing: To bear no malice nor hatred in my heart: To keep my hands from picking and stealing, and my tongue from evil-speaking, lying, and slandering: To keep my body in temperance, soberness, and chastity: Not to covet nor desire other men's goods; but to learn and labour truly to get mine own living, and to do my duty in that state of life, unto which it shall please God to call me."
       ></orbit-prompt>
     </orbit-reviewarea>
   </body>
